--- a/csv/11equip/w11.htm
+++ b/csv/11equip/w11.htm
@@ -30,3 +30,13 @@
   <td class="">
   <td class="">
   <td class="">
+</tr>
+
+<table class="asul">
+  <tr><td>Высота с тулейкой <td>372 мм
+  <tr><td>Высота без тулейки<td>290 мм
+  <tr><td>Ширина полотна    <td>240 мм
+  <tr><td>Вес               <td>860 г
+  <tr><td>Толщина стали     <td>1.5 мм
+</table>
+<table class="asul"><tr><td>Высота с тулейкой<td>372 мм<tr><td>Высота без тулейки<td>290 мм<tr><td>Ширина полотна<td>240 мм<tr><td>Вес<td>860 г<tr><td>Толщина стали<td>1.5 мм</table>
