--- a/csv/xref.htm
+++ b/csv/xref.htm
@@ -76,6 +76,40 @@
     <td class="txt"><a href="/catalog/cat280.shtml">Пилки для лобзика</a></td>
     <td class="arrow"><a href="/catalog/cat280.shtml"><img src="/img/1pix.gif" alt="" height="30" width="20"></a></td>
   </tr></tbody></table></div>
+==============================
+<div class="ref"><table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat198.shtml"><img src="/img/pic/elka/small/MAKITA_bulg.jpg" width="98" height="70" alt="" /></a></td>
+    <td class="txt"><a href="/catalog/cat198.shtml">Угловые шлифовальные машины</a></td>
+    <td class="arrow"><a href="/catalog/cat198.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table></div>
+<div class="ref"><table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat199.shtml"><img src="/img/pic/elka/small/Makita_perf.png" width="98" height="70" alt="" /></a></td>
+    <td class="txt"><a href="/catalog/cat199.shtml">Перфораторы</a></td>
+    <td class="arrow"><a href="/catalog/cat199.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table></div>
+<div class="ref"><table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat216.shtml"><img src="/img/pic/elka/small/MakitaHP1641F.jpg" width="98" height="70" alt="" /></a></td>
+    <td class="txt"><a href="/catalog/cat216.shtml">Дрели</a></td>
+    <td class="arrow"><a href="/catalog/cat216.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table></div>
+<div class="ref"><table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat200.shtml"><img src="/img/pic/elka/small/Makita_disc.png" width="98" height="70" alt="" /></a></td>
+    <td class="txt"><a href="/catalog/cat200.shtml">Дисковые пилы</a></td>
+    <td class="arrow"><a href="/catalog/cat200.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table></div>
+<div class="ref"><table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat201.shtml"><img src="/img/pic/elka/small/Makita_dr.png" width="98" height="70" alt="" /></a></td>
+    <td class="txt"><a href="/catalog/cat201.shtml">Шуруповерты</a></td>
+    <td class="arrow"><a href="/catalog/cat201.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table></div>
+<div class="ref"><table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat202.shtml"><img src="/img/pic/elka/small/Makita_lobz.png" width="98" height="70" alt="" /></a></td>
+    <td class="txt"><a href="/catalog/cat202.shtml">Электролобзики</a></td>
+    <td class="arrow"><a href="/catalog/cat202.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table></div>
+==============================
+<div class="ref"></div>
+==============================
 <div class="ref"></div>
 ==============================
 </body>
