--- a/csv/resource.htm
+++ b/csv/resource.htm
@@ -40,6 +40,8 @@
 <br>Постоянным клиентам &mdash; особые условия.
 
 <p class="price-none">Цены и количество товара на складе узнавайте у менеджера.</p>
+<p class="subtit price-none">Действующие цены на данные позиции узнавайте у менеджеров.</p>
+<p class="subtit price-none">Количество товара на данный день ограничено остатками на складах.</p>
 
 <a href='/catalog/cat8.shtml'>металлических сеток</a>, <a href='/catalog/cat118.shtml'>проволоки</a>,
 РАСПРОДАЖА буров
@@ -133,4 +135,3 @@
 
 "Рулетки - повышаем цены.ods"
 "На основании поставки - кое что изменилось - подправь.ods"
-
