--- a/csv/xref.htm
+++ b/csv/xref.htm
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title></title>
   <link href="/'chg/css/user.css">
-  <link href="/'chg/css/style.css">
+  <link href="/'chg/css/design.css">
 </head>
 <body>
 ==============================
