--- a/csv/resource.htm
+++ b/csv/resource.htm
@@ -1,6 +1,6 @@
 <!--suppress HtmlUnknownTarget -->
 <link href="/'chg/css/user.css">
-<link href="/'chg/css/style.css">
+<link href="/'chg/css/design.css">
 
 1|n|216|2350|neat|| d|
 <UL><LI>Р<LI>Э<LI>Д<LI>В</UL><DL><DT>Потребляемая мощность:<DD>0 Вт<DT>О:<DD>0<DT>Ч:<DD>0<DT>Д:<DD>1<DT>П:<DD>З<DT>Вес:<DD>1 кг</DL><p><span class="addt">||/img/pic/e/small/jpg|/img/pic/e/big/
@@ -105,9 +105,9 @@
   <tr><td>Вес               <td>860 г
   <tr><td>Толщина стали     <td>1.5 мм
 </table>
-<div class="art"></div>
-  <p class="price-none"></p>
-<p class="c"></p>
+<div class="art">a</div>
+  <p class="price-none">b</p>
+<p class="c">c</p>
 
 ==============================
 <table id="test" class="emmet" cellpadding="0">
