Буры Плюсы Хагверт

--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,10 @@
+ <DT>07 фев: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер </span><span class="dop"> БАРС "3 в 1"</span></a><br>
+ <DT>28 янв: <DD><a href="/catalog/cat123.shtml" title="Расширен ассортимент"><span class="title">Бокорезы</span><span class="dop"> HARDAX усиленные</span></a><br>
+ <DT>28 янв: <DD><a href="/catalog/cat121.shtml" title="Расширен ассортимент"><span class="title">Плоскогубцы</span><span class="dop"> HARDAX</span></a><br>
+ <DT>22 янв: <DD><a href="/catalog/cat301.shtml" title="Расширен ассортимент"><span class="title">Уровни</span><span class="dop"> усиленные</span></a><br>
+ <DT>23 дек: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Пена монтажная</span><span class="dop"> V6 профи</span></a><br>
+ <DT>22 дек: <DD><a href="/catalog/cat128.shtml" title="Новые товары"><span class="title">Ножовки по дереву</span><span class="dop"> "Wood Line"</span></a><br>
+ <DT>15 дек: <DD><a href="/catalog/cat189.shtml" title="Расширен ассортимент"><span class="title">Чашки алмазные</span><span class="dop"> BERGEN</span></a><br>
  <DT>08 дек: <DD><a href="/catalog/cat29.shtml"  title="Новые товары"><span class="title">Пильные диски</span><span class="dop"> BERGEN</span></a><br>
  <DT>26 ноя: <DD><a href="/catalog/cat72.shtml"  title="Цены снижены"><span class="title">Строит. рулетки</span><span class="dop"> BERGEN</span></a><br>
  <DT>17 ноя: <DD><a href="/catalog/cat45.shtml"  title="Цены снижены"><span class="title">Электроды</span><span class="dop"> з-да СпецЭлектрод</span></a><br>
