before comp repair

--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,4 +1,11 @@
- <DT>07 фев: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер </span><span class="dop"> БАРС "3 в 1"</span></a><br>
+<DT>09 апр: <DD><a href="/catalog/cat391.shtml" title="Расширен ассортимент"><span class="title">Сучкорезы</span><span class="dop"> TRUPER</span></a><br>
+<DT>09 апр: <DD><a href="/catalog/cat396.shtml" title="Новые товары"><span class="title">Распылители садовые</span><span class="dop"></span></a><br>
+<DT>08 апр: <DD><a href="/catalog/cat410.shtml" title="Новые товары"><span class="title">Сверла (металл)</span><span class="dop"> ступенчатые</span></a><br>
+<DT>06 апр: <DD><a href="/catalog/cat112.shtml" title="Расширен ассортимент"><span class="title">Замки навесные</span><span class="dop"> всепогодные</span></a><br>
+<DT>27 мар: <DD><a href="/catalog/cat103.shtml" title="Новый товар"><span class="title">Шланги поливочные</span><span class="dop"> Садовод</span></a><br>
+<DT>23 мар: <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Пена монтажная</span><span class="dop"> V6</span></a><br>
+<DT>17 мар: <DD><a href="/catalog/cat72.shtml"  title="Новый товар"><span class="title">Рулетки </span><span class="dop"> METRIC</span></a><br>
+<DT>07 фев: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер </span><span class="dop"> БАРС "3 в 1"</span></a><br>
  <DT>28 янв: <DD><a href="/catalog/cat123.shtml" title="Расширен ассортимент"><span class="title">Бокорезы</span><span class="dop"> HARDAX усиленные</span></a><br>
  <DT>28 янв: <DD><a href="/catalog/cat121.shtml" title="Расширен ассортимент"><span class="title">Плоскогубцы</span><span class="dop"> HARDAX</span></a><br>
  <DT>22 янв: <DD><a href="/catalog/cat301.shtml" title="Расширен ассортимент"><span class="title">Уровни</span><span class="dop"> усиленные</span></a><br>
@@ -35,7 +42,7 @@
  <DT>23 июн: <DD><a href="/catalog/cat31.shtml"  title="Новые товары"><span class="title">Анкеры</span><span class="dop"> разных типов</span></a><br>
  <DT>07 июн: <DD><a href="/catalog/cat131.shtml" title="Новый товар"><span class="title">Клещи переставные</span><span class="dop"> TRUPER</span></a><br>
  <DT>07 июн: <DD><a href="/catalog/cat339.shtml" title="Расширен ассортимент"><span class="title">Мачете</span><span class="dop"> TRUPER</span></a><br>
- <DT>06 июн: <DD><a href="/catalog/cat295.shtml" title="Новый товар"><span class="title">Kраски аэрозольные</span><span class="dop"> ZIGGER PR</span></a><br>
+ <DT>06 июн: <DD><a href="/catalog/cat295.shtml" title="Новый товар"><span class="title">Краски аэрозольные</span><span class="dop"> ZIGGER PR</span></a><br>
  <DT>02 июн: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Пены монтажные</span><span class="dop"> ZIGGER и др.</span></a><br>
  <DT>02 июн: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Герметики</span><span class="dop"> KIM TEC</span></a><br>
  <DT>24 мая: <DD><a href="/catalog/cat224.shtml" title="Новый товар"><span class="title">Сумка для инстр.</span><span class="dop"> TRUPER</span></a><br>
@@ -49,7 +56,7 @@
  <DT>11 апр: <DD><a href="/catalog/cat206.shtml" title="Новый товар"><span class="title">Молоток-гвоздодер</span><span class="dop"> TRUPER</span></a><br>
  <DT>11 апр: <DD><a href="/catalog/cat131.shtml" title="Новый товар"><span class="title">Клещи вязальные</span><span class="dop"> TRUPER</span></a><br>
  <DT>02 апр: <DD><a href="/catalog/cat314.shtml" title="Новый товар"><span class="title">Вилки, розетки кабельные</span><span class="dop"> PCE</span></a><br>
- <DT>01 апр: <DD><a href="/catalog/cat313.shtml" title="Новый товар"><span class="title">Kраски</span><span class="dop"> ВД-АК</span></a><br>
+ <DT>01 апр: <DD><a href="/catalog/cat313.shtml" title="Новый товар"><span class="title">Краски</span><span class="dop"> ВД-АК</span></a><br>
  <DT>30 мар: <DD><a href="/catalog/cat72.shtml"  title="Новый товар"><span class="title">Рулетки</span><span class="dop"> REMOSPACE</span></a><br>
  <DT>06 мар: <DD><a href="/catalog/cat308.shtml"  title="Новый товар"><span class="title">Хомуты</span><span class="dop"> стальные червячные</span></a><br>
  <DT>06 мар: <DD><a href="/catalog/cat110.shtml"  title="Новый товар"><span class="title">Хомуты</span><span class="dop"> нейлоновые</span></a><br>
