before livetex remove

--- a/csv/xref.htm
+++ b/csv/xref.htm
@@ -4,8 +4,8 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title></title>
-  <link href="/'chg/css/user.css">
-  <link href="/'chg/css/design.css">
+  <link href="/-chg/css/user.css">
+  <link href="/-chg/css/design.css">
 </head>
 <body>
 ==============================
@@ -46,13 +46,13 @@
   </tr></table></div>
 216 Дрели
 <div class="ref"><table class="cblock" cellpadding="0">
-  <tbody><tr><td><a href="/catalog/cat298.shtml"><img src="/img/pic/drill/small/sverla po metallu.jpg" alt="" height="70" width="98"></a></td>
-    <td class="txt"><a href="/catalog/cat298.shtml">Сверла по металлу</a></td>
-    <td class="arrow"><a href="/catalog/cat298.shtml"><img src="/img/1pix.gif" alt="" height="30" width="20"></a></td>
+  <tbody><tr><td><a href="/catalog/cat46.shtml"><img src="/img/pic/drill/small/sverla po metallu.jpg" alt="" height="70" width="98"></a></td>
+    <td class="txt"><a href="/catalog/cat46.shtml">Сверла по металлу</a></td>
+    <td class="arrow"><a href="/catalog/cat46.shtml"><img src="/img/1pix.gif" alt="" height="30" width="20"></a></td>
   </tr></tbody></table><table class="cblock" cellpadding="0">
-  <tbody><tr><td><a href="/catalog/cat78.shtml"><img src="/img/pic/drill/small/Sverlo Perovoy po DEREVU.jpg" alt="" height="70" width="98"></a></td>
-    <td class="txt"><a href="/catalog/cat78.shtml">Сверла по дереву</a></td>
-    <td class="arrow"><a href="/catalog/cat78.shtml"><img src="/img/1pix.gif" alt="" height="30" width="20"></a></td>
+  <tbody><tr><td><a href="/catalog/cat46.shtml"><img src="/img/pic/drill/small/Sverlo Perovoy po DEREVU.jpg" alt="" height="70" width="98"></a></td>
+    <td class="txt"><a href="/catalog/cat46.shtml">Сверла по дереву</a></td>
+    <td class="arrow"><a href="/catalog/cat46.shtml"><img src="/img/1pix.gif" alt="" height="30" width="20"></a></td>
   </tr></tbody></table></div>
 200 Дисковые пилы
 <div class="ref"><table class="cblock" cellpadding="0">
