--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,17 +1,16 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+ <DT>18 мая: <DD><a href="/catalog/cat86.shtml"  title="Цены снижены"><span class="title">Перчатки</span><span class="dop"> ХБ с ПВХ</span></a><br>
+ <DT>15 мая: <DD><a href="/catalog/cat306.shtml" title="Цены снижены"><span class="title">Растворитель и Уайт-спирит</span><span class="dop"></span></a><br>
+ <DT>14 мая: <DD><a href="/catalog/cat419.shtml" title="Новые товары"><span class="title">Адаптеры SDS+ для сверл. патр.</span><span class="dop"></span></a><br>
+ <DT>13 мая: <DD><a href="/catalog/cat69.shtml"  title="Новые товары"><span class="title">Миксеры с хвостовиком</span><span class="dop"> M14</span></a><br>
+ <DT>12 мая: <DD><a href="/catalog/cat195.shtml" title="Новый товар"><span class="title">Заклепочник усиленный</span><span class="dop">, 600 мм</span></a><br>
  <DT>12 мая: <DD><a href="/catalog/cat420.shtml" title="Новые товары"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
  <DT>08 мая: <DD><a href="/catalog/cat299.shtml"  title="Цены снижены и расширен ассортимент"><span class="title">Сверла по металлу</span><span class="dop"> RennBohr</span></a><br>
  <DT>07 мая: <DD><a href="/catalog/cat418.shtml" title="Новые товары"><span class="title">Фрезы</span><span class="dop"> HAGWERT</span></a><br>
  <DT>29 апр: <DD><a href="/catalog/cat103.shtml" title="Расширен ассортимент"><span class="title">Шланги поливочные</span><span class="dop"></span></a><br>
  <DT>28 апр: <DD><a href="/catalog/cat49.shtml"  title="Новый товар"><span class="title">Пика SDS Max</span><span class="dop"> HAGWERT</span></a><br>
  <DT>28 апр: <DD><a href="/catalog/cat417.shtml" title="Новые товары"><span class="title">Сверла (металл)</span><span class="dop"> удлинённые</span></a><br>
- <DT>24 апр: <DD><a href="/catalog/cat337.shtml" title="Расширен ассортимент"><span class="title">Наборы бит</span><span class="dop"> GERT "Swift"</span></a><br>
- <DT>23 апр: <DD><a href="/catalog/cat101.shtml" title="Новые товары"><span class="title">Лопаты</span><span class="dop"> РЕВЯКИНО</span></a><br>
- <DT>21 апр: <DD><a href="/catalog/cat414.shtml" title="Новые товары"><span class="title">Буры SDS Plus</span><span class="dop"> HAGWERT</span></a><br>
- <DT>20 апр: <DD><a href="/catalog/cat415.shtml" title="Новые товары"><span class="title">Сверла по металлу</span><span class="dop"> Сobalt</span></a><br>
- <DT>16 апр: <DD><a href="/catalog/cat412.shtml" title="Новые товары"><span class="title">Уплотнитель самоклеящийся</span><span class="dop"></span></a><br>
- <DT>09 апр: <DD><a href="/catalog/cat411.shtml" title="Новые товары"><span class="title">Садовые пилы</span><span class="dop"> TRUPER</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
