--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,9 @@
+<DT>24 апр: <DD><a href="/catalog/cat337.shtml" title="Расширен ассортимент"><span class="title">Наборы бит</span><span class="dop"> GERT "Swift"</span></a><br>
+<DT>23 апр: <DD><a href="/catalog/cat101.shtml" title="Новые товары"><span class="title">Лопаты</span><span class="dop"> РЕВЯКИНО</span></a><br>
+<DT>21 апр: <DD><a href="/catalog/cat414.shtml" title="Новые товары"><span class="title">Буры SDS Plus</span><span class="dop"> HAGWERT</span></a><br>
+<DT>20 апр: <DD><a href="/catalog/cat415.shtml" title="Новые товары"><span class="title">Сверла по металлу</span><span class="dop"> Сobalt</span></a><br>
+<DT>16 апр: <DD><a href="/catalog/cat412.shtml" title="Новые товары"><span class="title">Уплотнитель самоклеящийся</span><span class="dop"></span></a><br>
+<DT>09 апр: <DD><a href="/catalog/cat411.shtml" title="Новые товары"><span class="title">Садовые пилы</span><span class="dop"> TRUPER</span></a><br>
 <DT>09 апр: <DD><a href="/catalog/cat391.shtml" title="Расширен ассортимент"><span class="title">Сучкорезы</span><span class="dop"> TRUPER</span></a><br>
 <DT>09 апр: <DD><a href="/catalog/cat396.shtml" title="Новые товары"><span class="title">Распылители садовые</span><span class="dop"></span></a><br>
 <DT>08 апр: <DD><a href="/catalog/cat410.shtml" title="Новые товары"><span class="title">Сверла (металл)</span><span class="dop"> ступенчатые</span></a><br>
