--- a/csv/resource.htm
+++ b/csv/resource.htm
@@ -1,6 +1,6 @@
 <!--suppress HtmlUnknownTarget -->
-<link href="/'chg/css/user.css">
-<link href="/'chg/css/design.css">
+<link href="/-chg/css/user.css">
+<link href="/-chg/css/design.css">
 
 1|n|216|2350|neat|| d|
 <UL><LI>Р<LI>Э<LI>Д<LI>В</UL><DL><DT>Потребляемая мощность:<DD>0 Вт<DT>О:<DD>0<DT>Ч:<DD>0<DT>Д:<DD>1<DT>П:<DD>З<DT>Вес:<DD>1 кг</DL><p><span class="addt">||/img/pic/e/small/jpg|/img/pic/e/big/
