--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,16 +1,15 @@
 <div id=n>
 <h2>Новинки</h2><DL>
- <DT>18 мая: <DD><a href="/catalog/cat86.shtml"  title="Цены снижены"><span class="title">Перчатки</span><span class="dop"> ХБ с ПВХ</span></a><br>
- <DT>15 мая: <DD><a href="/catalog/cat306.shtml" title="Цены снижены"><span class="title">Растворитель и Уайт-спирит</span><span class="dop"></span></a><br>
- <DT>14 мая: <DD><a href="/catalog/cat419.shtml" title="Новые товары"><span class="title">Адаптеры SDS+ для сверл. патр.</span><span class="dop"></span></a><br>
- <DT>13 мая: <DD><a href="/catalog/cat69.shtml"  title="Новые товары"><span class="title">Миксеры с хвостовиком</span><span class="dop"> M14</span></a><br>
- <DT>12 мая: <DD><a href="/catalog/cat195.shtml" title="Новый товар"><span class="title">Заклепочник усиленный</span><span class="dop">, 600 мм</span></a><br>
- <DT>12 мая: <DD><a href="/catalog/cat420.shtml" title="Новые товары"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
- <DT>08 мая: <DD><a href="/catalog/cat299.shtml"  title="Цены снижены и расширен ассортимент"><span class="title">Сверла по металлу</span><span class="dop"> RennBohr</span></a><br>
- <DT>07 мая: <DD><a href="/catalog/cat418.shtml" title="Новые товары"><span class="title">Фрезы</span><span class="dop"> HAGWERT</span></a><br>
- <DT>29 апр: <DD><a href="/catalog/cat103.shtml" title="Расширен ассортимент"><span class="title">Шланги поливочные</span><span class="dop"></span></a><br>
- <DT>28 апр: <DD><a href="/catalog/cat49.shtml"  title="Новый товар"><span class="title">Пика SDS Max</span><span class="dop"> HAGWERT</span></a><br>
- <DT>28 апр: <DD><a href="/catalog/cat417.shtml" title="Новые товары"><span class="title">Сверла (металл)</span><span class="dop"> удлинённые</span></a><br>
+  <DT>21 мая: <DD><a href="/catalog/cat304.shtml" title="Новый товар"><span class="title">Эмаль ПФ-115</span><span class="dop"> KRAFOR</span></a><br>
+  <DT>20 мая: <DD><a href="/catalog/cat49.shtml"  title="Новый товар"><span class="title">Пика SDS Plus</span><span class="dop"> HAGWERT</span></a><br>
+  <DT>20 мая: <DD><a href="/catalog/cat338.shtml" title="Расширен ассортимент"><span class="title">Магнитные держатели для бит</span><span class="dop"></span></a><br>
+  <DT>19 мая: <DD><a href="/catalog/cat423.shtml" title="Новые товары"><span class="title">Кусачки усиленные</span><span class="dop"> TRUPER</span></a><br>
+  <DT>18 мая: <DD><a href="/catalog/cat86.shtml"  title="Цены снижены"><span class="title">Перчатки</span><span class="dop"> ХБ с ПВХ</span></a><br>
+  <DT>15 мая: <DD><a href="/catalog/cat306.shtml" title="Цены снижены"><span class="title">Растворитель и Уайт-спирит</span><span class="dop"></span></a><br>
+  <DT>14 мая: <DD><a href="/catalog/cat419.shtml" title="Новые товары"><span class="title">Адаптеры SDS+ для сверл. патр.</span><span class="dop"></span></a><br>
+  <DT>13 мая: <DD><a href="/catalog/cat69.shtml"  title="Новые товары"><span class="title">Миксеры с хвостовиком</span><span class="dop"> M14</span></a><br>
+  <DT>12 мая: <DD><a href="/catalog/cat195.shtml" title="Новый товар"><span class="title">Заклепочник усиленный</span><span class="dop">, 600 мм</span></a><br>
+  <DT>12 мая: <DD><a href="/catalog/cat420.shtml" title="Новые товары"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
@@ -39,10 +38,10 @@
  <td class="good-txt"><a href="/catalog/cat24.shtml"
 	title="Круги отрезные по металлу (Луга) на нашем сайте"><p><span class="title">Круги отрезные по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода)</span><span class="addt">,<br>разные размеры</span></p></a>
 </table>
-<table class="one-good" cellpadding="0"><tr valign="top"><td align="center" width=1><a href="/catalog/cat305.shtml"><img src="/img/pic/shmal/small/GF-021.jpg" width="98"
-	title="Грунт ГФ-021, пр-во г. Лида"></a></td>
+<table class="one-good" cellpadding="0"><tr valign="top"><td align="center" width=1><a href="/catalog/cat305.shtml"><img src="/img/pic/shmal/small/GF021.jpg" width="98"
+	title="Грунт ГФ-021 быстросохнущий"></a></td>
  <td class="good-txt"><a href="/catalog/cat305.shtml"
-	title="Грунт ГФ-021, пр-во г. Лида на нашем сайте"><p><span class="title">Грунт ГФ-021</span><span class="dop"><br>(пр-во г. Лида)</span></p></a>
+	title="Грунт ГФ-021 быстросохнущий на нашем сайте"><p><span class="title">Грунт ГФ-021</span><span class="dop"><br>быстросохнущий</span></p></a>
 </table>
 <table class="one-good" cellpadding="0"><tr valign="top"><td align="center" width=1><a class="lightbox-enabled"
 	href="/img/pic/strhoz/big/Lopata%20STYK%20RS.jpg" rel="lightbox"><img src="/img/pic/strhoz/small/Lopata%20STYK%20RS.jpg" width="98"
