--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,8 @@
+<DT>08 мая: <DD><a href="/catalog/cat299.shtml"  title="Цены снижены и расширен ассортимент"><span class="title">Сверла по металлу</span><span class="dop"> RennBohr</span></a><br>
+<DT>07 мая: <DD><a href="/catalog/cat418.shtml" title="Новые товары"><span class="title">Фрезы</span><span class="dop"> HAGWERT</span></a><br>
+<DT>29 апр: <DD><a href="/catalog/cat103.shtml" title="Расширен ассортимент"><span class="title">Шланги поливочные</span><span class="dop"></span></a><br>
+<DT>28 апр: <DD><a href="/catalog/cat49.shtml"  title="Новый товар"><span class="title">Пика SDS Max</span><span class="dop"> HAGWERT</span></a><br>
+<DT>28 апр: <DD><a href="/catalog/cat417.shtml" title="Новые товары"><span class="title">Сверла (металл)</span><span class="dop"> удлинённые</span></a><br>
 <DT>24 апр: <DD><a href="/catalog/cat337.shtml" title="Расширен ассортимент"><span class="title">Наборы бит</span><span class="dop"> GERT "Swift"</span></a><br>
 <DT>23 апр: <DD><a href="/catalog/cat101.shtml" title="Новые товары"><span class="title">Лопаты</span><span class="dop"> РЕВЯКИНО</span></a><br>
 <DT>21 апр: <DD><a href="/catalog/cat414.shtml" title="Новые товары"><span class="title">Буры SDS Plus</span><span class="dop"> HAGWERT</span></a><br>
