--- a/csv/xref.htm
+++ b/csv/xref.htm
@@ -108,6 +108,28 @@
     <td class="arrow"><a href="/catalog/cat202.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
   </tr></table></div>
 ==============================
+<div class="ref"><table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat425.shtml"><img src="/img/pic/instr/small/ZAKLEPKI.jpg" width="98" height="70" alt="" /></a></td>
+    <td class="txt"><a href="/catalog/cat425.shtml">Заклепки</a></td>
+    <td class="arrow"><a href="/catalog/cat425.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table></div>
+==============================
+<div class="ref"><table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat195.shtml"><img src="/img/pic/instr/small/ZAKLEPOCHNIK.jpg" width="98" height="70" alt="" /></a></td>
+    <td class="txt"><a href="/catalog/cat195.shtml">Заклепочники</a></td>
+    <td class="arrow"><a href="/catalog/cat195.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table></div>
+==============================
+<div class="ref"></div>
+==============================
+<div class="ref"></div>
+==============================
+<div class="ref"></div>
+==============================
+<div class="ref"></div>
+==============================
+<div class="ref"></div>
+==============================
 <div class="ref"></div>
 ==============================
 <div class="ref"></div>
