--- a/csv/resource.htm
+++ b/csv/resource.htm
@@ -3,11 +3,9 @@
 <link href="/-chg/css/design.css">
 
 1|n|216|2350|neat|| d|
-<UL><LI>Р<LI>Э<LI>Д<LI>В</UL><DL><DT>Потребляемая мощность:<DD>0 Вт<DT>О:<DD>0<DT>Ч:<DD>0<DT>Д:<DD>1<DT>П:<DD>З<DT>Вес:<DD>1 кг</DL><p><span class="addt">||/img/pic/e/small/jpg|/img/pic/e/big/
-                                                                                </span>
-<UL><LI>Д<LI>В</UL><p><span class="addt">
-                                                                                </span>
-<UL><LI>.<LI>.</UL>
+</span></p><UL><LI>Р<LI>Э<LI>Д<LI>В</UL><DL><DT>Потребляемая мощность:<DD>0 Вт<DT>О:<DD>0<DT>Ч:<DD>0<DT>Д:<DD>1<DT>П:<DD>З<DT>Вес:<DD>1 кг</DL><p><span class="addt">||/img/pic/e/small/jpg|/img/pic/e/big/
+</span></p><UL><LI>Д<LI>В</UL><p><span class="addt">
+</span></p><UL><LI>.<LI>.</UL>
 <DL><DT>П:<DD>0<DT>О:<DD>0</DL>
  <span class=art>арт. </span>
 <table cellpadding=0 cellspacing=0 border=0><tr><td>красный<td class=art>арт. 2</table>
@@ -119,7 +117,7 @@
 </table>
 <div>
   <header>
-    <ul>
+    </span></p><UL>
       <li><a href=""></a></li>
       <li><a href=""></a></li>
     </ul>
@@ -129,7 +127,7 @@
   </footer>
 </div>
 <div>
-  <ul>
+  </span></p><UL>
     <li class="rt"></li>
   </ul>
 </div>
