--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,8 @@
+<DT>15 мая: <DD><a href="/catalog/cat306.shtml" title="Цены снижены"><span class="title">Растворитель и Уайт-спирит</span><span class="dop"></span></a><br>
+<DT>14 мая: <DD><a href="/catalog/cat419.shtml" title="Новые товары"><span class="title">Адаптеры SDS+ для сверл. патр.</span><span class="dop"></span></a><br>
+<DT>13 мая: <DD><a href="/catalog/cat69.shtml"  title="Новые товары"><span class="title">Миксеры с хвостовиком</span><span class="dop"> M14</span></a><br>
+<DT>12 мая: <DD><a href="/catalog/cat420.shtml" title="Новые товары"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
+<DT>12 мая: <DD><a href="/catalog/cat195.shtml" title="Новый товар"><span class="title">Заклепочник усиленный</span><span class="dop">, 600 мм</span></a><br>
 <DT>08 мая: <DD><a href="/catalog/cat299.shtml"  title="Цены снижены и расширен ассортимент"><span class="title">Сверла по металлу</span><span class="dop"> RennBohr</span></a><br>
 <DT>07 мая: <DD><a href="/catalog/cat418.shtml" title="Новые товары"><span class="title">Фрезы</span><span class="dop"> HAGWERT</span></a><br>
 <DT>29 апр: <DD><a href="/catalog/cat103.shtml" title="Расширен ассортимент"><span class="title">Шланги поливочные</span><span class="dop"></span></a><br>
