--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -16,6 +16,8 @@
 {obj_fld}{51}{70}
 
 <LI>Имеется <a href="pdf" target=_blank title="Документ PDF">руководство по эксплуатации</a>.</LI>
+<br>Имеется <a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank title="Документ PDF">сертификат пожарной безопасности</a>.</span></p></td><td align=center><a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank><img style="border:none" src=/img/pic/foam/small/Cert_Profpur.JPG title="Картинка: Сертификат пожарной безопасности"></a><p><span>
+Имеется <a href=/img/pic/foam/big/Certificate.JPG target=_blank title="Картинка JPG">сертификат пожарной безопасности</a>.<LI>Технические характеристики: <a href=/img/pic/foam/big/FOME-PRO-2.pdf target=_blank title="Документ PDF">Mounting Foam</a>, <a href=/img/pic/foam/big/FOME-PRO-1.pdf target=_blank title="Документ PDF">Gun Foam</a></UL></span></p></td><td class=nop align=center width=1><a href=/img/pic/foam/big/Certificate.JPG target=_blank><img style=border:none; src=/img/pic/foam/small/Certificate.JPG title="Сертификат пожарной безопасности"></a><p><span>
 
 <br>Распродажа ограничена количеством товара на складе.
 
