--- a/csv/000res/xref.htm
+++ b/csv/000res/xref.htm
@@ -141,6 +141,27 @@
 <div class="ref"></div>
 ==============================
 <div class="ref"></div>
+============================================================
+<div class="ref">
+<table class="cblock" cellpadding="0">
+  <tbody><tr><td><a href="/catalog/cat47.shtml"><img src="/img/pic/drill/small/BURY SDS PLUS.jpg" alt="" height="70" width="98"></a></td>
+    <td class="txt"><a href="/catalog/cat47.shtml">Буры по бетону SDS plus BERGEN</a></td>
+    <td class="arrow"><a href="/catalog/cat47.shtml"><img src="/img/1pix.gif" alt="" height="30" width="20"></a></td>
+  </tr></tbody></table>
+<table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat86.shtml"><img src="/img/pic/defence/small/Perchatki HB s PVH.jpg" width="98" height="70" alt="" /></a></td>
+    <td class="txt"><a href="/catalog/cat86.shtml">Перчатки ХБ с ПВХ и латексным покрытием</a></td>
+    <td class="arrow"><a href="/catalog/cat86.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table>
+<table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat208.shtml"><img src="/img/pic/strhoz/small/garbage.jpg" width="98" height="70" alt="" /></a></td>
+    <td class="txt"><a href="/catalog/cat208.shtml">Мешки для мусора</a></td>
+    <td class="arrow"><a href="/catalog/cat208.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table>
+</div>
+==============================
+==============================
+==============================
 ==============================
 </body>
 </html>
