--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,16 +1,17 @@
 <div id=n>
 <h2>Новинки</h2><DL>
-  <DT>19 июн: <DD><a href="/catalog/cat101.shtml" title="Цены снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали</span></a><br>
-  <DT>15 июн: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Скобы для степлера</span><span class="dop"> GROSS</span></a><br>
-  <DT>11 июн: <DD><a href="/catalog/cat364.shtml" title="Расширен ассортимент"><span class="title">Жидкое мыло</span><span class="dop"></span></a><br>
-  <DT>10 июн: <DD><a href="/catalog/cat428.shtml" title="Новый товар"><span class="title">Валики структурные</span><span class="dop"></span></a><br>
-  <DT>08 июн: <DD><a href="/catalog/cat262.shtml" title="Расширен ассортимент"><span class="title">Наборы торцевых головок </span><span class="dop"></span></a><br>
-  <DT>08 июн: <DD><a href="/catalog/cat109.shtml" title="Расширен ассортимент"><span class="title">Мелки по бетону </span><span class="dop"></span></a><br>
-  <DT>21 мая: <DD><a href="/catalog/cat304.shtml" title="Новый товар"><span class="title">Эмаль ПФ-115</span><span class="dop"> KRAFOR</span></a><br>
-  <DT>20 мая: <DD><a href="/catalog/cat49.shtml"  title="Новый товар"><span class="title">Пика SDS Plus</span><span class="dop"> HAGWERT</span></a><br>
-  <DT>20 мая: <DD><a href="/catalog/cat338.shtml" title="Расширен ассортимент"><span class="title">Магнитные держатели для бит</span><span class="dop"></span></a><br>
-  <DT>19 мая: <DD><a href="/catalog/cat423.shtml" title="Новые товары"><span class="title">Кусачки усиленные</span><span class="dop"> TRUPER</span></a><br>
-  <DT>18 мая: <DD><a href="/catalog/cat86.shtml"  title="Цены снижены"><span class="title">Перчатки</span><span class="dop"> ХБ с ПВХ</span></a><br>
+  <DT>16 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесаные</span><span class="dop"> GROSS</span></a><br>
+  <DT>15 июл: <DD><a href="/catalog/cat47.shtml"  title="Новые товары"><span class="title">Буры по бетону SDS+</span><span class="dop"> UNIVERSE</span></a><br>
+  <DT>15 июл: <DD><a href="/catalog/cat186.shtml"  title="Новый товар"><span class="title">Шпагат льнопеньковый</span><span class="dop"></span></a><br>
+  <DT>06 июл: <DD><a href="/catalog/cat45.shtml"  title="Цены снижены"><span class="title">Электроды сварочные</span><span class="dop"> ЛЭЗ</span></a><br>
+  <DT>29 июн: <DD><a href="/catalog/cat118.shtml" title="Цены снижены"><span class="title">Проволока ОК Т/О 1.2 мм</span><span class="dop"></span></a><br>
+  <DT>29 июн: <DD><a href="/catalog/cat47.shtml"  title="Цены снижены"><span class="title">Буры SDS Plus</span><span class="dop"> BERGEN</span></a><br>
+  <DT>26 июн: <DD><a href="/catalog/cat32.shtml"  title="Цены снижены"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
+  <DT>25 июн: <DD><a href="/catalog/cat48.shtml"  title="Цены снижены"><span class="title">Буры SDS Max</span><span class="dop"> BERGEN</span></a><br>
+  <DT>25 июн: <DD><a href="/catalog/cat14.shtml"  title="Цены снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+  <DT>24 июн: <DD><a href="/catalog/cat87.shtml"  title="Цены снижены"><span class="title">Перчатки </span><span class="dop"> нитриловые</span></a><br>
+  <DT>23 июн: <DD><a href="/catalog/cat45.shtml"  title="Цены снижены"><span class="title">Электроды</span><span class="dop"> з-да СпецЭлектрод</span></a><br>
+  <DT>22 июн: <DD><a href="/catalog/cat195.shtml" title="Новый товар"><span class="title">Заклепочник</span><span class="dop"> STELGRIT</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
