--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,14 @@
+<DT>19 июн: <DD><a href="/catalog/cat101.shtml" title="Цены снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали</span></a><br>
+<DT>15 июн: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Скобы для степлера</span><span class="dop"> GROSS</span></a><br>
+<DT>11 июн: <DD><a href="/catalog/cat364.shtml" title="Расширен ассортимент"><span class="title">Жидкое мыло</span><span class="dop"></span></a><br>
+<DT>10 июн: <DD><a href="/catalog/cat428.shtml" title="Новый товар"><span class="title">Валики структурные</span><span class="dop"></span></a><br>
+<DT>08 июн: <DD><a href="/catalog/cat262.shtml" title="Расширен ассортимент"><span class="title">Наборы торцевых головок </span><span class="dop"></span></a><br>
+<DT>08 июн: <DD><a href="/catalog/cat109.shtml" title="Расширен ассортимент"><span class="title">Мелки по бетону </span><span class="dop"></span></a><br>
+<DT>21 мая: <DD><a href="/catalog/cat304.shtml" title="Новый товар"><span class="title">Эмаль ПФ-115</span><span class="dop"> KRAFOR</span></a><br>
+<DT>20 мая: <DD><a href="/catalog/cat49.shtml"  title="Новый товар"><span class="title">Пика SDS Plus</span><span class="dop"> HAGWERT</span></a><br>
+<DT>20 мая: <DD><a href="/catalog/cat338.shtml" title="Расширен ассортимент"><span class="title">Магнитные держатели для бит</span><span class="dop"></span></a><br>
+<DT>19 мая: <DD><a href="/catalog/cat423.shtml" title="Новые товары"><span class="title">Кусачки усиленные</span><span class="dop"> TRUPER</span></a><br>
+<DT>18 мая: <DD><a href="/catalog/cat86.shtml"  title="Цены снижены"><span class="title">Перчатки</span><span class="dop"> ХБ с ПВХ</span></a><br>
 <DT>15 мая: <DD><a href="/catalog/cat306.shtml" title="Цены снижены"><span class="title">Растворитель и Уайт-спирит</span><span class="dop"></span></a><br>
 <DT>14 мая: <DD><a href="/catalog/cat419.shtml" title="Новые товары"><span class="title">Адаптеры SDS+ для сверл. патр.</span><span class="dop"></span></a><br>
 <DT>13 мая: <DD><a href="/catalog/cat69.shtml"  title="Новые товары"><span class="title">Миксеры с хвостовиком</span><span class="dop"> M14</span></a><br>
