--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>22 июл: <DD><a href="/catalog/cat265.shtml" title="Новый товар"><span class="title">Удлинитель торц.</span><span class="dop"> MATRIX</span></a><br>
   <DT>16 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесаные</span><span class="dop"> GROSS</span></a><br>
   <DT>15 июл: <DD><a href="/catalog/cat47.shtml"  title="Новые товары"><span class="title">Буры по бетону SDS+</span><span class="dop"> UNIVERSE</span></a><br>
   <DT>15 июл: <DD><a href="/catalog/cat186.shtml"  title="Новый товар"><span class="title">Шпагат льнопеньковый</span><span class="dop"></span></a><br>
@@ -25,6 +26,10 @@
 	class="dop"> пр-ва з-да СпецЭлектрод</span><span
 	class="addt">,<br>&empty; от 2.0 до 5.0 мм</span></p></a>
 </table>
+<a href="/catalog/cat47.shtml" title="Буры по бетону для перфоратора SDS Plus UNIVERSE на нашем сайте" style="text-decoration: none"><table cellpadding="0" class="one-good">
+  <tr valign="top"><td align="center" width="1"><img src="/img/pic/drill/small/BURY SDS PLUS.jpg" width="98" alt="" /></td>
+    <td class="good-txt"><p><span class="title">Буры по бетону для перфоратора SDS+</span><span class="dop"> UNIVERSE</span><span class="addt">, повышенной прочности</span></p></td>
+  </tr></table></a>
 <table class="one-good" cellpadding="0"><tr valign="top"><td align="center" width=1><a class="lightbox-enabled"
 	href="/img/pic/defence/big/Perchatki%20HB%20s%20PVH.jpg" rel="lightbox"><img
 	src="/img/pic/defence/small/Perchatki%20HB%20s%20PVH.jpg" width="98"
