--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -36,11 +36,11 @@
 <br>Основной ассортимент буров SDS plus представлен на странице буров <a href="/catalog/cat47.shtml">BERGEN</a>.
 <br>Основной ассортимент буров SDS Max представлен на страницах буров <a href="/catalog/cat302.shtml">RENNBOHR</a> и <a href="/catalog/cat48.shtml">BERGEN</a>.
 
-Все цены указаны с учетом НДС и актуальны на {DATE}.<br>Количество товара на складе уточняйте у менеджера.
-<br><b>Оптовая цена</b> действует при сумме счета от <b>20 тысяч</b> рублей.
+<span class="nds">Все цены указаны с учетом НДС и актуальны на {DATE}.</span>
+<span class="price"><br>Количество товара на складе уточняйте у менеджера.</span>
+<span class="price"><br><br><b>Оптовая цена</b> действует при сумме счета от <b>20 тысяч</b> рублей.
 <br><b>Крупнооптовая</b> &mdash; при сумме счета от <b>50 тысяч</b> рублей.
-<br>Постоянным клиентам &mdash; особые условия.
-
+<br>Постоянным клиентам &mdash; особые условия.</span>
 <p class="price-none">Цены и количество товара на складе узнавайте у менеджера.</p>
 <p class="subtit price-none">Действующие цены на данные позиции узнавайте у менеджеров.</p>
 <p class="subtit price-none">Количество товара на данный день ограничено остатками на складах.</p>
