--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>27 июл: <DD><a href="/catalog/cat293.shtml" title="Цены снижены"><span class="title">Распродажа буров</span><span class="dop"> SDS+</span></a><br>
   <DT>22 июл: <DD><a href="/catalog/cat265.shtml" title="Новый товар"><span class="title">Удлинитель торц.</span><span class="dop"> MATRIX</span></a><br>
   <DT>16 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесаные</span><span class="dop"> GROSS</span></a><br>
   <DT>15 июл: <DD><a href="/catalog/cat47.shtml"  title="Новые товары"><span class="title">Буры по бетону SDS+</span><span class="dop"> UNIVERSE</span></a><br>
@@ -9,10 +10,6 @@
   <DT>29 июн: <DD><a href="/catalog/cat47.shtml"  title="Цены снижены"><span class="title">Буры SDS Plus</span><span class="dop"> BERGEN</span></a><br>
   <DT>26 июн: <DD><a href="/catalog/cat32.shtml"  title="Цены снижены"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
   <DT>25 июн: <DD><a href="/catalog/cat48.shtml"  title="Цены снижены"><span class="title">Буры SDS Max</span><span class="dop"> BERGEN</span></a><br>
-  <DT>25 июн: <DD><a href="/catalog/cat14.shtml"  title="Цены снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
-  <DT>24 июн: <DD><a href="/catalog/cat87.shtml"  title="Цены снижены"><span class="title">Перчатки </span><span class="dop"> нитриловые</span></a><br>
-  <DT>23 июн: <DD><a href="/catalog/cat45.shtml"  title="Цены снижены"><span class="title">Электроды</span><span class="dop"> з-да СпецЭлектрод</span></a><br>
-  <DT>22 июн: <DD><a href="/catalog/cat195.shtml" title="Новый товар"><span class="title">Заклепочник</span><span class="dop"> STELGRIT</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
