--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,7 @@
+<DT>25 июн: <DD><a href="/catalog/cat14.shtml"  title="Цены снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+<DT>24 июн: <DD><a href="/catalog/cat87.shtml"  title="Цены снижены"><span class="title">Перчатки </span><span class="dop"> нитриловые</span></a><br>
+<DT>23 июн: <DD><a href="/catalog/cat45.shtml"  title="Цены снижены"><span class="title">Электроды</span><span class="dop"> з-да СпецЭлектрод</span></a><br>
+<DT>22 июн: <DD><a href="/catalog/cat195.shtml" title="Новый товар"><span class="title">Заклепочник</span><span class="dop"> STELGRIT</span></a><br>
 <DT>19 июн: <DD><a href="/catalog/cat101.shtml" title="Цены снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали</span></a><br>
 <DT>15 июн: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Скобы для степлера</span><span class="dop"> GROSS</span></a><br>
 <DT>11 июн: <DD><a href="/catalog/cat364.shtml" title="Расширен ассортимент"><span class="title">Жидкое мыло</span><span class="dop"></span></a><br>
