--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -17,7 +17,9 @@
 
 <LI>Имеется <a href="pdf" target=_blank title="Документ PDF">руководство по эксплуатации</a>.</LI>
 <br>Имеется <a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank title="Документ PDF">сертификат пожарной безопасности</a>.</span></p></td><td align=center><a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank><img style="border:none" src=/img/pic/foam/small/Cert_Profpur.JPG title="Картинка: Сертификат пожарной безопасности"></a><p><span>
+</span></p></td>
 Имеется <a href=/img/pic/foam/big/Certificate.JPG target=_blank title="Картинка JPG">сертификат пожарной безопасности</a>.<LI>Технические характеристики: <a href=/img/pic/foam/big/FOME-PRO-2.pdf target=_blank title="Документ PDF">Mounting Foam</a>, <a href=/img/pic/foam/big/FOME-PRO-1.pdf target=_blank title="Документ PDF">Gun Foam</a></UL></span></p></td><td class=nop align=center width=1><a href=/img/pic/foam/big/Certificate.JPG target=_blank><img style=border:none; src=/img/pic/foam/small/Certificate.JPG title="Сертификат пожарной безопасности"></a><p><span>
+</span></p></td></LI>
 
 <br>Распродажа ограничена количеством товара на складе.
 
@@ -119,7 +121,7 @@
 </table>
 <div>
   <header>
-    </span></p><UL>
+    <UL>
       <li><a href=""></a></li>
       <li><a href=""></a></li>
     </ul>
@@ -129,11 +131,55 @@
   </footer>
 </div>
 <div>
-  </span></p><UL>
+  <UL>
     <li class="rt"></li>
   </ul>
 </div>
 ==============================
 
-"Рулетки - повышаем цены.ods"
-"На основании поставки - кое что изменилось - подправь.ods"
+&newline; &nobreak; nbsp &negativemediumspace; &filledsmallsquare;
+  <abbr title="t"></abbr>
+  <table>
+    <tr>
+      <td></td>
+    </tr>
+  </table>
+entry-list<
+<entry number="1">11</entry>
+<entry number="2">22</entry>
+<entry number="3"><aa>&laquo;&raquo;</aa></entry>
+<entry number="4"></entry>
+<entry/></entry>
+<ps>number</ps>="5"></entry>
+<blockquote></blockquote>
+&r &#8
+<dp>wwwwwwww</dp>
+
+<div id="dd">
+  <div class="tst"><span class=""><a href=""></a></span></div>
+</div>
+<div title="Hello world!"></div>
+
+<!doctype html>
+    <html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+</head>
+<body>
+<div class="">
+  <table>
+    <tr class="w e">
+      <td id="q"></td>
+    </tr>
+  </table>
+</div>
+<span class="" style="margin: 11em 12ex;">
+  <abbr class=""><!----></abbr>
+  </span>
+Lorem ipsum dolor sit amet, <span class="">
+  <p><b></b>consectetur</p>
+  </span> adipisicing elit. Ab consequuntur dolor dolore id, ipsum maxime officiis pariatur, quaerat velit veritatis voluptas, voluptatum.
+</body>
+</html>
+m11
