--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>29 июл: <DD><a href="/catalog/cat158.shtml" title="Новый товар"><span class="title">Плащ-дождевик</span><span class="dop">, 50 мкм</span></a><br>
   <DT>27 июл: <DD><a href="/catalog/cat293.shtml" title="Цены снижены"><span class="title">Распродажа буров</span><span class="dop"> SDS+</span></a><br>
   <DT>22 июл: <DD><a href="/catalog/cat265.shtml" title="Новый товар"><span class="title">Удлинитель торц.</span><span class="dop"> MATRIX</span></a><br>
   <DT>16 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесаные</span><span class="dop"> GROSS</span></a><br>
