--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -44,6 +44,8 @@
 <br><b>Крупнооптовая</b> &mdash; при сумме счета от <b>50 тысяч</b> рублей.
 <br>Постоянным клиентам &mdash; особые условия.</span>
 <p class="price-none">Цены и количество товара на складе узнавайте у менеджера.</p>
+<p class="price-none">К указанным на сайте ценам могут быть применены скидки.</p>
+<p class="subtit price-none">О наличии товара и действующих ценах осведомляйтесь у менеджеров.</p>
 <p class="subtit price-none">Действующие цены на данные позиции узнавайте у менеджеров.</p>
 <p class="subtit price-none">Количество товара на данный день ограничено остатками на складах.</p>
 
