--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,7 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>14 авг : <DD><a href="/catalog/cat392.shtml" title="Расширен ассортимент"><span class="title">Ножницы садовые</span><span class="dop"> TRUPER</span></a><br>
+  <DT>06 авг : <DD><a href="/catalog/cat57.shtml"  title="Расширен ассортимент"><span class="title">Ножницы по металлу</span><span class="dop"> GROSS</span></a><br>
   <DT>29 июл: <DD><a href="/catalog/cat158.shtml" title="Новый товар"><span class="title">Плащ-дождевик</span><span class="dop">, 50 мкм</span></a><br>
   <DT>27 июл: <DD><a href="/catalog/cat293.shtml" title="Цены снижены"><span class="title">Распродажа буров</span><span class="dop"> SDS+</span></a><br>
   <DT>22 июл: <DD><a href="/catalog/cat265.shtml" title="Новый товар"><span class="title">Удлинитель торц.</span><span class="dop"> MATRIX</span></a><br>
